--- a/Auriculoterapia/app/src/main/res/values/colors.xml
+++ b/Auriculoterapia/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="IMC1">#F2BA52</color>
     <color name="IMC2">#FDE289</color>
     <color name="IMC3">#FEF0C1</color>
-    <color name="IMC4">#D2E1CB</color>
+    <color name="IMC4">#7FE152</color>
     <color name="IMC5">#F5C09E</color>
     <color name="IMC6">#EEA070</color>
     <color name="IMC7">#B8450F</color>
