--- a/Auriculoterapia/app/src/main/res/layout/activity_evolucion_sintomas_paciente.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_evolucion_sintomas_paciente.xml
@@ -10,6 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/linechartpatient">
+
+        <TextView
+            android:id="@+id/tv_pruebalinechart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </com.github.mikephil.charting.charts.LineChart>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
