--- a/Auriculoterapia/app/src/main/res/layout/activity_result_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_result_patient.xml
@@ -26,6 +26,29 @@
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Última Sesión:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/tvUltimaSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_weight="1"
+        android:text="1"
+        android:textAlignment="center"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
+        app:layout_constraintStart_toEndOf="@+id/textView10" />
+
     <TableLayout
         android:id="@+id/tableLayout_resultpatient"
         android:layout_width="wrap_content"
@@ -34,7 +57,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_TratamientosResultadosPacientes">
+        app:layout_constraintTop_toBottomOf="@+id/textView10">
 
         <TableRow android:background="#E5E9EC">
 
@@ -78,30 +101,6 @@
 
         <!-- DATA  -->
 
-        <TableRow>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Última Sesión" />
-
-            <TextView
-                android:id="@+id/tvUltimaSesion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="1"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/tvUltimaSesionVacio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center" />
-        </TableRow>
 
         <TableRow>
 
@@ -128,7 +127,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvNivelEficienciaSeveridadVerde"
+                    android:id="@+id/tvNivelEficienciaSeveridadRojo"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:alpha="0.5"
@@ -142,7 +141,7 @@
                     android:background="@drawable/ratio_evolucion_forma" />
 
                 <TextView
-                    android:id="@+id/tvNivelEficienciaSeveridadRojo"
+                    android:id="@+id/tvNivelEficienciaSeveridadVerde"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:alpha="0.5"
@@ -238,7 +237,7 @@
         android:id="@+id/textView3"
         android:layout_width="62dp"
         android:layout_height="30dp"
-        android:text="Evolución de sintomas"
+        android:text="Evolución de tratamiento"
         android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
@@ -304,7 +303,7 @@
                         android:layout_weight="1"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:text="Nivel de eficiencia"
+                        android:text="Grasa Corporal"
                         android:textAlignment="center"
                         android:textStyle="bold" />
                 </TableRow>
@@ -315,7 +314,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Nivel"
+                        android:text="Indice"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -331,29 +330,12 @@
 
                 <!-- DATA  -->
 
-                <TableRow>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="#18B034"
-                        android:text="5"
-                        android:textAlignment="center" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Muy alta"
-                        android:textAlignment="center" />
-
-
-                </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCBuena"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -365,7 +347,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Alta"
+                        android:text="Buena"
                         android:textAlignment="center" />
 
                 </TableRow>
@@ -373,6 +355,7 @@
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCNormal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -384,13 +367,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Media"
+                        android:text="Normal"
                         android:textAlignment="center" />
                 </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCElevada"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -402,13 +386,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Baja"
+                        android:text="Elevada"
                         android:textAlignment="center" />
                 </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCMuyElevada"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -420,7 +405,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Muy baja"
+                        android:text="Muy elevada"
                         android:textAlignment="center" />
                 </TableRow>
 
@@ -531,7 +516,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#D2E1CB"
+                        android:background="#21E545"
                         android:text="18.5 - 24.9"
                         android:textAlignment="center" />
 
