--- a/Auriculoterapia/app/src/main/res/layout/notification_item.xml
+++ b/Auriculoterapia/app/src/main/res/layout/notification_item.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_notificacion"
+    android:layout_width="match_parent"
 
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="4dp"
-    app:cardCornerRadius="12dp"
-    >
+    app:cardCornerRadius="12dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="12dp">
+
         <ImageView
             android:id="@+id/avatar_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            app:srcCompat="@drawable/avatar_image"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="8dp"/>
+            android:layout_marginHorizontal="8dp"
+            app:srcCompat="@drawable/avatar_image" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
 
             >
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,35 +37,35 @@
 
                 <TextView
                     android:id="@+id/fechaNotificacion"
-                    android:textSize="14sp"
-                    android:text="2020-10-07"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginEnd="8dp"
+                    android:text="2020-10-07"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/horaNotificacion"
-                    android:text="09:45"
-                    android:textSize="14sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="09:45"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
             <TextView
                 android:id="@+id/tituloNotificacion"
-                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Marcos Rivas"
                 android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/descripcionNotificacion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="Acaba de registrar una nueva cita"/>
+                android:text="Acaba de registrar una nueva cita"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
