--- a/Auriculoterapia/app/src/main/res/layout/fragment_results_history.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_results_history.xml
@@ -26,18 +26,43 @@
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:text="Última Sesión"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/tvUltimaSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_weight="1"
+        android:text="1"
+        android:textAlignment="center"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textView9" />
+
     <TableLayout
         android:id="@+id/tableLayout_resultpatient"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_TratamientosResultadosPacientes">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
 
         <TableRow android:background="#E5E9EC">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
@@ -50,7 +75,7 @@
         <TableRow android:background="#E5E9EC">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Categoría"
@@ -58,7 +83,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Indicador"
@@ -66,7 +91,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Severidad"
@@ -79,32 +104,7 @@
         <TableRow>
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Última Sesión"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/tvUltimaSesion"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="1"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/tvUltimaSesionVacio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center" />
-        </TableRow>
-
-        <TableRow>
-
-            <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Nivel de eficiencia"
@@ -112,19 +112,40 @@
 
             <TextView
                 android:id="@+id/tvNivelEficiencia"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="1"
                 android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/tvNivelEficienciaSeveridad"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#FF0000"
-                android:textAlignment="center" />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvNivelEficienciaSeveridadRojo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:alpha="0.5"
+                    android:background="@drawable/ratio_evolucion_forma" />
+
+                <TextView
+                    android:id="@+id/tvNivelEficienciaSeveridadAmarillo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:alpha="0.5"
+                    android:background="@drawable/ratio_evolucion_forma" />
+
+                <TextView
+                    android:id="@+id/tvNivelEficienciaSeveridadVerde"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:alpha="0.5"
+                    android:background="@drawable/ratio_evolucion_forma" />
+
+            </LinearLayout>
         </TableRow>
 
         <TableRow>
@@ -212,7 +233,7 @@
         android:id="@+id/textView3"
         android:layout_width="62dp"
         android:layout_height="30dp"
-        android:text="Evolución de sintomas"
+        android:text="Evolución de tratamiento"
         android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
@@ -278,7 +299,7 @@
                         android:layout_weight="1"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:text="Nivel de eficiencia"
+                        android:text="Grasa Corporal"
                         android:textAlignment="center"
                         android:textStyle="bold" />
                 </TableRow>
@@ -289,7 +310,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Nivel"
+                        android:text="Indice"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -308,26 +329,7 @@
                 <TableRow>
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="#18B034"
-                        android:text="5"
-                        android:textAlignment="center" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Muy alta"
-                        android:textAlignment="center" />
-
-
-                </TableRow>
-
-                <TableRow>
-
-                    <TextView
+                        android:id="@+id/tvGCBuena"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -339,14 +341,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Alta"
+                        android:text="Buena"
                         android:textAlignment="center" />
+
 
                 </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCNormal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -356,15 +360,17 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Media"
+                        android:text="Normal"
                         android:textAlignment="center" />
+
                 </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCElevada"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -376,13 +382,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Baja"
+                        android:text="Elevada"
                         android:textAlignment="center" />
                 </TableRow>
 
                 <TableRow>
 
                     <TextView
+                        android:id="@+id/tvGCMuyElevada"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -394,7 +401,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Muy baja"
+                        android:text="Muy elevada"
                         android:textAlignment="center" />
                 </TableRow>
 
@@ -505,7 +512,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#D2E1CB"
+                        android:background="#21E545"
                         android:text="18.5 - 24.9"
                         android:textAlignment="center" />
 
