--- a/Auriculoterapia/app/src/main/res/values/colors.xml
+++ b/Auriculoterapia/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#6F9AE8</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#6FE8B3</color>
 
     <color name="IMC1">#F2BA52</color>
     <color name="IMC2">#FDE289</color>
