--- a/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
@@ -9,117 +9,104 @@
         android:id="@+id/et_peso2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="70.5"
-        android:maxLength="5"
         android:inputType="numberDecimal"
+        android:maxLength="5"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_peso"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_peso" />
+        app:layout_constraintStart_toStartOf="@+id/guideline17" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
         android:text="Otros:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_peso" />
+        app:layout_constraintTop_toTopOf="@+id/guideline21" />
 
     <EditText
         android:id="@+id/et_otros2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
-        android:layout_marginEnd="28dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="otros"
         android:inputType="textMultiLine"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="@+id/guideline17" />
 
     <TextView
         android:id="@+id/tv_malestar"
-        android:layout_width="68dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="69dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Evolución:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Tratamiento" />
+        app:layout_constraintTop_toTopOf="@+id/guideline19" />
 
     <TextView
         android:id="@+id/tv_Tratamiento"
         android:layout_width="0dp"
         android:layout_height="19dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
         android:text="Tratamiento:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Codigo" />
+        app:layout_constraintTop_toTopOf="@+id/guideline18" />
 
     <TextView
         android:id="@+id/tv_peso"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:text="Peso (kg):"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_malestar" />
+        app:layout_constraintTop_toTopOf="@+id/guideline20" />
 
     <Spinner
         android:id="@+id/spinner_disminucion"
         android:layout_width="185dp"
         android:layout_height="36dp"
-        android:layout_marginEnd="28dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_malestar"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline17"
         app:layout_constraintTop_toTopOf="@+id/tv_malestar" />
 
     <Button
         android:id="@+id/btn_guardar_formulario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="120dp"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_otros2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline22" />
 
     <TextView
         android:id="@+id/tv_tratamientoResult"
         android:layout_width="114dp"
         android:layout_height="21dp"
-        android:layout_marginEnd="99dp"
         android:text="Tipo"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_Tratamiento"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guideline17" />
 
     <TextView
         android:id="@+id/tv_malestar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="4dp"
         android:text="1"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_malestar"
         app:layout_constraintStart_toEndOf="@+id/tv_malestar"
-        app:layout_constraintTop_toBottomOf="@+id/tv_tratamientoResult" />
+        app:layout_constraintTop_toTopOf="@+id/tv_malestar" />
 
     <TextView
         android:id="@+id/tv_Codigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Codigo: "
         app:layout_constraintStart_toStartOf="parent"
@@ -129,9 +116,8 @@
         android:id="@+id/spinner_codigoTratamiento"
         android:layout_width="185dp"
         android:layout_height="36dp"
-        android:layout_marginEnd="28dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_Codigo"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline17"
         app:layout_constraintTop_toTopOf="@+id/tv_Codigo" />
 
     <TextView
@@ -172,5 +158,47 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.36" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1367989" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2735978" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.41039672" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5471956" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.68399453" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
