--- a/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,40 +9,30 @@
         android:id="@+id/et_otros"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="113dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="otros"
-        android:maxLength="30"
         android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_otros"
-        app:layout_constraintTop_toBottomOf="@+id/btn_InsertarImagen" />
+        android:maxLength="30"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/guideline15" />
 
     <EditText
         android:id="@+id/et_peso"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="70.5"
-        android:maxLength="5"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_peso"
-        app:layout_constraintTop_toBottomOf="@+id/tv_resultEdad" />
+        android:maxLength="5"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
     <TextView
         android:id="@+id/tv_otros"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_marginStart="16dp"
         android:text="Otros:"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_otros"
         app:layout_constraintStart_toStartOf="parent" />
@@ -52,34 +41,28 @@
         android:id="@+id/et_altura"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="1.70"
-        android:maxLength="4"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_altura"
-        app:layout_constraintTop_toBottomOf="@+id/et_peso" />
+        android:maxLength="4"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/guideline12" />
 
     <Button
         android:id="@+id/btn_registrarTratamiento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Registrar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_otros" />
+        app:layout_constraintTop_toTopOf="@+id/guideline16" />
 
     <TextView
         android:id="@+id/tv_edad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:text="Edad:"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_resultEdad"
         app:layout_constraintStart_toStartOf="parent" />
@@ -88,17 +71,16 @@
         android:id="@+id/tv_sintomas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="16dp"
         android:text="Síntomas:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_altura" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_Sintomas"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_peso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:text="Peso (kg):"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_peso"
         app:layout_constraintStart_toStartOf="parent" />
@@ -107,7 +89,7 @@
         android:id="@+id/tv_altura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:text="Altura (m):"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_altura"
         app:layout_constraintStart_toStartOf="parent" />
@@ -116,7 +98,7 @@
         android:id="@+id/tv_examinarFoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:text="Examinar:"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_InsertarImagen"
         app:layout_constraintStart_toStartOf="parent" />
@@ -125,57 +107,49 @@
         android:id="@+id/btn_InsertarImagen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
         android:text="Subir Foto"
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_examinarFoto"
-        app:layout_constraintTop_toBottomOf="@+id/et_Sintomas" />
+        app:layout_constraintStart_toEndOf="@+id/iv_checkImage"
+        app:layout_constraintTop_toTopOf="@+id/guideline14" />
 
     <EditText
         android:id="@+id/et_Sintomas"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Dolor..."
-        android:maxLength="30"
         android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_sintomas"
-        app:layout_constraintTop_toBottomOf="@+id/et_altura" />
+        android:maxLength="30"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
     <TextView
         android:id="@+id/tv_resultEdad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
         android:layout_marginTop="16dp"
         android:text="result"
-        app:layout_constraintStart_toEndOf="@+id/tv_edad"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
         app:layout_constraintTop_toBottomOf="@+id/tv_PacienteSolicitudSpecialist" />
 
     <TextView
         android:id="@+id/tv_urlImage"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_examinarFoto"
         app:layout_constraintStart_toEndOf="@+id/tv_examinarFoto"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sintomas" />
+        app:layout_constraintTop_toTopOf="@+id/tv_examinarFoto" />
 
     <ImageView
         android:id="@+id/iv_checkImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_InsertarImagen"
-        app:layout_constraintTop_toBottomOf="@+id/et_Sintomas"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_InsertarImagen"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/btn_InsertarImagen"
         app:srcCompat="@drawable/check" />
 
     <Button
@@ -193,10 +167,10 @@
         android:layout_width="208dp"
         android:layout_height="40dp"
         android:layout_marginEnd="26dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/tv_PacienteSolicitudSpecialist"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_PacienteSolicitudSpecialist"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="@+id/tv_PacienteSolicitudSpecialist" />
 
     <TextView
         android:id="@+id/tv_PacienteSolicitudSpecialist"
@@ -205,8 +179,57 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:text="Seleccionar:"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.36666667" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.13816689" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2749658" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.41039672" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5471956" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.68399453" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.82079345" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
