--- a/Auriculoterapia/app/src/main/res/layout/activity_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_register.xml
@@ -26,10 +26,10 @@
         android:layout_marginStart="87dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
         android:inputType="textPersonName"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
         android:maxLength="30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvNombre"
@@ -106,11 +106,11 @@
         android:layout_marginStart="87dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
         android:ems="10"
         android:hint="@string/str_apellidohint"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
-        android:maxLength="30"
         android:inputType="textPersonName"
+        android:maxLength="30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvApellido"
         app:layout_constraintTop_toBottomOf="@+id/et_nombreRegistro" />
@@ -122,11 +122,11 @@
         android:layout_marginStart="89dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
-        android:maxLength="20"
         android:inputType="textPersonName"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvUsuario"
         app:layout_constraintTop_toBottomOf="@+id/spinner3" />
@@ -138,11 +138,11 @@
         android:layout_marginStart="54dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="28dp"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
         android:ems="10"
         android:hint="@string/str_keywordhint"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
-        android:maxLength="20"
         android:inputType="textPersonName"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvKeyWordRegistro"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
@@ -156,8 +156,8 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/password"
-        android:maxLength="20"
         android:inputType="textPassword"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvPasswordRegistro"
         app:layout_constraintTop_toBottomOf="@+id/et_usuario" />
@@ -191,11 +191,10 @@
         android:id="@+id/buttonRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="148dp"
+        android:layout_marginTop="12dp"
         android:text="@string/registrar_button_main"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
