--- a/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
+++ b/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
@@ -89,6 +89,11 @@
             android:layout_gravity="end"
            >
 
+            <ImageButton
+                android:id="@+id/ib_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/stat_sys_phone_call" />
             <Button
                 android:id="@+id/botonCancelar"
                 android:layout_width="wrap_content"
