--- a/Auriculoterapia/app/src/main/res/values/styles.xml
+++ b/Auriculoterapia/app/src/main/res/values/styles.xml
@@ -18,4 +18,13 @@
         <item name="android:windowFullscreen">false</item>
     </style>
 
+    <!--DatePickerStyle-->
+    <style name="MySpinnerDatePickerStyle" parent="android:Theme.Material.Dialog">
+        <item name="android:datePickerStyle">@style/MySpinnerDatePicker</item>
+    </style>
+
+    <style name="MySpinnerDatePicker" parent="android:Widget.Material.DatePicker">
+        <item name="android:datePickerMode">spinner</item>
+    </style>
+
 </resources>
